--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ subgrounds = "^1.0.1"
 jupyter = "^1.0.0"
 notebook = "^6.4.12"
 ipykernel = "^6.16.0"
+matplotlib = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core"]
